# skills

skills/000wonderclaw/clawcv/: README.md  SKILL.md  _meta.json
skills/0x-wzw/x-interact/: _meta.json
skills/0xgrainzy/clawford/: _meta.json
skills/0xspeter/camsnap-1-0-0/: _meta.json
skills/108518/skill-goldprice/: _meta.json
skills/10sk/skroller/: _meta.json
skills/1215656/terminal-command-execution-1-0-0/: _meta.json
skills/15027302155/douyin-push-video/: _meta.json
skills/15217172098/designer-intelligence-station/: _meta.json
skills/15228947433/agent-autopilot-bak/: _meta.json
skills/1580021414-afk/memory-networks/: _meta.json
skills/15910701838/simple-tech-analyzer/: _meta.json
skills/15914355527/baidu-search-v2/: _meta.json
skills/bloodandeath/openforge/pkg/: README.md  pyproject.toml  ruff.toml
skills/bloodandeath/openforge/pkg/src/openforge/: __init__.py  cli.py  completion.py  context.py  events.py  executor.py  git_ops.py  overlap.py  parser.py  prompts.py  run_context.py  security.py  state.py  validator_runner.py
skills/bloodandeath/openforge/pkg/src/openforge/schemas/: __init__.py  events.py  prd.py  results.py  state.py
skills/bloodandeath/openforge/pkg/tests/: test_cli.py  test_completion.py  test_context.py  test_executor.py  test_overlap.py  test_parser.py  test_prompts.py  test_run_context.py  test_security.py  test_state.py  test_validator_runner.py
skills/bloodandeath/openforge/pkg/tests/fixtures/: invalid-duplicate-block.md  invalid-missing-alias.md  invalid-overlap.md  valid-multi-stage.md
(+2187 files in other folders)
